# cppfetch

./: .gitignore  CITATION.cff  CMakeLists.txt  Doxyfile  README.md  docker-compose.yml
.github/workflows/: codeql-analysis.yml  test-compiler-versions.yml
cmake/: Config.cmake.in
docs/: annotated.html  classcppfetch_1_1cppfetch-members.html  classcppfetch_1_1cppfetch.html  classes.html  core_8cpp.html  core_8cpp__incl.map  core_8cpp__incl.md5  core_8hpp.html  core_8hpp__dep__incl.map  core_8hpp__dep__incl.md5  core_8hpp__incl.map  core_8hpp__incl.md5  core_8hpp_source.html  dir_000002_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e798d7c4dfb70fbc8e1310192114c37f.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  graph_legend.html  index.html  namespacecppfetch.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  utils_8cpp.html  utils_8cpp__incl.map  utils_8cpp__incl.md5  utils_8hpp.html  utils_8hpp__dep__incl.map  utils_8hpp__dep__incl.md5  utils_8hpp__incl.map  utils_8hpp__incl.md5  utils_8hpp_source.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  searchdata.js
examples/: CMakeLists.txt  example_1.cpp  multiple_files_download.cpp  single_file_download.cpp
include/cppfetch/: core.hpp  utils.hpp
src/: core.cpp  utils.cpp
test/: CMakeLists.txt  IWYU.sh  all_tests.sh  valgrind.supp
test/other_tests/: CMakeLists.txt  thread_safety_tests.cpp
test/unit_tests/: CMakeLists.txt  tests_core.cpp
